<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="Customize App">

        <ListPreference
            android:defaultValue="@string/def_theme"
            android:dialogTitle="@string/theme_dialog_title"
            android:entries="@array/themes"
            android:entryValues="@array/themeID"
            android:key="theme"
            android:summary="@string/theme_summary"
            android:title="@string/theme_dialog_title" />

        <ListPreference
            android:defaultValue="false"
            android:dialogTitle="@string/language"
            android:entries="@array/lan"
            android:entryValues="@array/lanID"
            android:key="Language"
            android:summary="@string/lan_summary"
            android:title="@string/language" />

    </PreferenceCategory>

    <PreferenceCategory android:title="Security">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="fingerprintEnabled"
            android:title="Enable Fingerprint" />
    </PreferenceCategory>

</PreferenceScreen>