<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="10dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true"
            app:contentPadding="16dp">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="16dp">

                <TextView
                    android:id="@+id/title_calendar_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/gregorian_calander"
                    android:textColor="?attr/backgroundColor"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="@+id/title_calendar_one"
                    app:layout_constraintTop_toBottomOf="@+id/title_calendar_one">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_day"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="0.5">

                        <EditText
                            android:id="@+id/edit_day"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:cursorVisible="true"
                            android:hint="@string/date"
                            android:inputType="date"
                            android:maxLength="2"
                            android:singleLine="true" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_month"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="0.5">

                        <EditText
                            android:id="@+id/edit_month"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/month"
                            android:inputType="date"
                            android:maxLength="2" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_year"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="0.5">

                        <EditText
                            android:id="@+id/edit_year"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/year"
                            android:inputType="date"
                            android:maxLength="4" />
                    </android.support.design.widget.TextInputLayout>


                </LinearLayout>

                <Button
                    android:id="@+id/btn_convert"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:background="@null"
                    android:hapticFeedbackEnabled="true"
                    android:text="@string/convert"
                    android:textAlignment="textEnd"
                    android:textColor="?attr/colorAccent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

                <Button
                    android:id="@+id/btn_change"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:background="@null"
                    android:text="@string/to_gregorian"
                    android:textColor="?attr/backgroundColor"
                    app:layout_constraintBottom_toBottomOf="@+id/btn_convert"
                    app:layout_constraintEnd_toStartOf="@+id/btn_convert" />

                <TextView
                    android:id="@+id/title_calendar_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ethiopian_calander"
                    android:textColor="?attr/backgroundColor"
                    android:textSize="18sp"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="@+id/title_calendar_one"
                    app:layout_constraintTop_toBottomOf="@+id/btn_convert" />

                <TextView
                    android:id="@+id/result_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"
                    android:textSize="24sp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/title_calendar_two"
                    app:layout_constraintTop_toBottomOf="@+id/title_calendar_two"
                    tools:text="ሰኞ መስከረም 23 2018" />

            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

</FrameLayout>